in header values.  Besides, "\n" and "\r" were both changed into spaces
whereas "\r\n" just was to be removed.  As for B<archive>, B<makehistory>
and B<tdx-util>, they did not keep leading whitespaces in headers when
generating overview data, and B<archive> did not change "\n"
(when not preceded by "\r") into a space when generating overview data.

=item *

Fixed a bug when HDR, XHDR and XPAT were used when I<virtualhost> was set
to true in F<readers.conf>.  The Xref: header of articles posted to only
one newsgroup appeared empty.

=item *

Fixed a bug in B<tdx-util> which was not properly parsing empty overview
fields when called with B<-A> or B<-F>.

=item *

Fixed a bug in B<cvtbatch> which was returning only the size of the
headers of an article when the C<b> parameter was used with the B<-w>
flag.  It now correctly returns the size of the whole article, which
is what C<b> is supposed to do.  Besides, B<cvtbatch> has a new C<t>
parameter which can be used with the B<-w> flag, so as to retrieve
the arrival time of an article.

=item *

B<batcher> has not supported the retrieval of an article with its
file name for a long time.  The B<-S> flag is therefore removed.

=item *

B<news.daily> no longer sends superfluous mails when the B<nomail>
keyword is given.  Mail is only sent when there is real output.
Previously, there would always be headings and empty lines useful
to structure the full report, which are now ommitted.  Also, the
output of programs executed with B<postexec> is now included in the
regular mail.  Thanks to Florian Schlichting for the patch.

=item *

Other minor bug fixes and documentation improvements.

=back

=head1 Changes in 2.5.1

=over 2

=item *

Fixed a segfault in B<imap_connection> which could occur when SASL
was used.

=item *

Fixed a segfault in the keyword generation code which was assuming
that an article was nul-terminated.  Fixed another segfault in the
keyword generation code when an article already contained a